# pjt_yonsei

jeonse_fraud/: README.md  pyproject.toml  requirements.txt
jeonse_fraud/config/: logging_config.yaml  settings.yaml
jeonse_fraud/prompts/: advisory_generation_prompt.md  system_role_prompt.md
jeonse_fraud/prompts/risk_assessment_chain/: 03_overall_risk_synthesis_prompt.md
jeonse_fraud/src/: config_loader.py  data_ingestion.py  external_api_handler.py  llm_service.py  main.py  rag_retrival.py  report_generator.py  risk_assesment_engine.py  solution_advisor.py
openai_tutorial/: gpt_call.ipynb  pyproject.toml
paperbot/: pyproject.toml
text_to_statistical_test/: .dockerignore  .gitignore  ARCHITECTURE.md  BLUEPRINT.md  Dockerfile  README.md  current_project.md  docker-compose.yml  env.example  env_example.txt  factoring_log.md  main.py  main_runner.py  project_plan.md  pyproject.toml  pytest.ini  refactoring_plan.md  setup.sh  setup_project.py
text_to_statistical_test/.cursor/rules/: agent-work-rule.mdc
text_to_statistical_test/code_execution/: __init__.py  safe_code_executor.py
text_to_statistical_test/config/: __init__.py  logging_config.py  settings.py
text_to_statistical_test/core/: __init__.py  agent.py  context.py  context_manager.py  decision_engine.py  workflow_manager.py
text_to_statistical_test/core/agent/: __init__.py  autonomous_agent.py  decision_tree.py  flow_controller.py  tool_registry.py  tools.py
text_to_statistical_test/core/pipeline/: __init__.py  agent_analysis.py  agent_execution.py  agent_reporting.py  analysis_proposal.py  app_context.py  autonomous_analysis_step.py  base_pipeline_step.py  code_execution_step.py  data_selection.py  data_selection_step.py  data_summary.py  orchestrator.py  pipeline_step.py  reporting_step.py  step0_pipeline.py  step1_data_selection.py  step2_autonomous_analysis.py  step3_reporting.py  user_request.py  user_request_step.py  user_selection.py  visualization_step.py
text_to_statistical_test/core/rag/: __init__.py  context_builder.py  knowledge_store.py  query_engine.py  rag_cache_manager.py  rag_manager.py  retriever.py  vector_store.py
text_to_statistical_test/core/reporting/: __init__.py  output_formatter.py  report_builder.py  report_generator.py  visualization_engine.py
text_to_statistical_test/core/workflow/: __init__.py  conversation_history.py  orchestrator.py  state_manager.py
text_to_statistical_test/data_processing/: __init__.py  data_loader.py
text_to_statistical_test/input_data/data_files/: ab_test_click_data.csv  addiction_population_data.csv  anova_customer_satisfaction.csv  climate_change_impact.csv  customer_survey.csv  ecommerce_customer_behavior.csv  employee_performance_correlation.csv  employee_performance_satisfaction.csv  empty_data.csv  healthcare_patient_outcomes.csv  healthcare_study.csv  house_price_prediction.csv  logistic_purchase_data.csv  manufacturing_quality_control.csv  marketing_campaign_analysis.csv  missing_col.csv  normal_sales.csv  regression_housing_prices.csv  remote_worker_productivity_1000.csv  sales_performance.csv  sample_customers.csv  sample_dataset.csv  social_media_engagement.csv  student_admission_data.csv  student_performance.csv  student_survey_dataset.csv  team_sales_performance.csv  twoway_anova_sales_data.csv
text_to_statistical_test/input_data/metadata/: analysis_guidelines.md  business_dictionary.json  domain_knowledge.md
text_to_statistical_test/llm_services/: __init__.py  llm_client.py  prompt_crafter.py
text_to_statistical_test/llm_services/prompts/: code_generation.json  natural_language_analysis.json  result_interpretation.json  workflow_coordination.json
text_to_statistical_test/output/data_files/: final_data-20250620-165103.csv  final_data-20250620-165600.csv  final_data-20250620-170237.csv  final_data-20250620-172121.csv  final_data-20250620-192157.csv  final_data-20250620-193452.csv  final_data-20250620-195231.csv  final_data-20250620-212020.csv  final_data-20250621-095052.csv  final_data-20250621-101253.csv  final_data-20250623-115558.csv  final_data-20250623-144258.csv  final_data-20250623-145446.csv  final_data-20250623-151034.csv  final_data-20250623-151838.csv
text_to_statistical_test/output/reports/: report-20250620-115817.md  report-20250620-120125.md  report-20250620-165103.md  report-20250620-165600.md  report-20250620-170237.md  report-20250620-172121.md  report-20250620-182118.md  report-20250620-192157.md  report-20250620-193452.md  report-20250620-195231.md  report-20250620-195527.md  report-20250620-201112.md  report-20250620-212020.md  report-20250621-095052.md  report-20250621-100155.md  report-20250621-101253.md  report-20250623-114721.md  (+5 more)
text_to_statistical_test/output_results/: __init__.py  output_formatter.py  result_manager.py
text_to_statistical_test/rag_system/: __init__.py  business_retriever.py  rag_manager.py  schema_retriever.py
text_to_statistical_test/reporting/: __init__.py  report_generator.py  template_manager.py  visualization_report.py
text_to_statistical_test/resources/: __init__.py  statistical_methods.json  workflow_graph.json  workflow_spec.json
text_to_statistical_test/services/: __init__.py
text_to_statistical_test/src/: agent.py  main.py
text_to_statistical_test/tests/: integration_test_scenarios.md  qa.json  test_code_executor.py  test_data_loading.py  test_file_selection.py  test_query_mode.py  test_rag_retriever.py  test_scenario_anova.md  test_scenario_linear_regression.md  test_scenario_proportion_ztest.md  test_workflow.py  validation.py
text_to_statistical_test/utils/: __init__.py  analysis_recommender.py  data_loader.py  data_utils.py  error_handler.py  global_cache.py  helpers.py  input_validator.py  json_utils.py  system_setup.py  ui_helpers.py  workflow_utils.py
(+196 files in other folders)
