[tool.poetry]
name = "text-to-statistical-test"
version = "0.1.0"
description = ""
authors = ["wesley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.84.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.6"
requests = "^2.32.3"
jinja2 = "^3.1.6"
scipy = "^1.15.3"
statsmodels = "^0.14.4"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
faiss-cpu = "^1.11.0"
sentence-transformers = "^4.1.0"
pyarrow = "^20.0.0"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
plotly = "^6.1.2"
scikit-learn = "^1.7.0"
anthropic = "^0.52.2"
markdown = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
