[tool.poetry]
name = "text-to-statistical-test"
version = "1.0.0"
description = "RAG 기반 Agentic AI 통계 분석 시스템"
authors = ["wesley"]
readme = "README.md"
packages = [{include = "core"}, {include = "services"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
pandas = "^2.2.0"
numpy = "^1.24.0"
scipy = "^1.15.0"

# Statistical analysis
statsmodels = "^0.14.0"
scikit-learn = "^1.7.0"

# Visualization
matplotlib = "^3.10.0"
seaborn = "^0.13.0"
plotly = "^6.1.0"

# Data handling
pyarrow = "^20.0.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.0"

# LLM and RAG
openai = "^1.84.0"
anthropic = "^0.52.0"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"

# Text processing and templating
jinja2 = "^3.1.0"
markdown = "^3.8"

# Utilities
requests = "^2.32.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
psutil = "^5.9.0"

# Optional dependencies
asyncio-mqtt = {version = "^0.16.0", optional = true}
redis = {version = "^5.0.0", optional = true}

[tool.poetry.extras]
mqtt = ["asyncio-mqtt"]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.25.0"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
stat-test = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
