[tool.poetry]
name = "text-to-statistical-test"
version = "1.0.0"
description = "RAG 기반 Agentic AI 통계 분석 시스템"
authors = ["wooshikwon"]
readme = "README.md"
packages = [{include = "core"}, {include = "services"}, {include = "utils"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pandas = "^2.2.2"
scipy = "^1.13.1"
statsmodels = "^0.14.2"
markdown-it-py = "^3.0.0"
python-frontmatter = "^1.1.0"
py-cpuinfo = "^9.0.0"
sentence-transformers = "^3.0.1"
faiss-cpu = "^1.8.0"
lancedb = "^0.6.8"
docker = "^7.1.0"

# LLM and core logic
openai = "^1.35.13"
scikit-learn = "^1.5.1"
pydantic = "^2.8.2"

# Data handling
pyarrow = "^14.0.0"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"

# Visualization
matplotlib = "^3.9.1"
seaborn = "^0.13.2"

# Reporting
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-rerunfailures = "^14.0"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"

[tool.poetry.scripts]
ttst = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
